--- a/src/tab.scss
+++ b/src/tab.scss
@@ -1,103 +1,28 @@
-.switch {
+nav {
   display: flex;
-  align-items: center;
+}
+nav > ::slotted([slot="tab"]) {
+  padding: 1rem 2rem;
+  flex: 1 1 auto;
+  color: var(--color-darkGrey);
+  text-align: center;
+  border: none;
+  background-color: transparent;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  outline: none;
+  border-bottom: 2px solid #ccc;
+  color: #555;
+  transition: 0.3s;
+}
+nav > ::slotted([slot="tab"][selected]) {
+  border-color: #ff5308;
+}
+::slotted([slot="panel"]) {
+  display: none;
+}
 
-  &.start {
-    .switch-label {
-      order: 2;
-    }
-  }
-
-  &.top,
-  &.bottom {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  &.top .switch-label {
-    order: 2;
-  }
-
-  // Adjust the gap between the switch and the label as needed
-  gap: 10px;
-
-  .switch-label {
-    display: inline-block;
-    align-items: center;
-    position: relative;
-    width: 60px;
-    height: 34px;
-
-    &.small {
-      width: 50px;
-      height: 28px;
-    }
-
-    &.medium {
-      width: 60px;
-      height: 34px;
-    }
-
-    input {
-      display: none;
-    }
-
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      transition: 0.4s;
-      border-radius: 34px;
-
-      &:before {
-        position: absolute;
-        content: '';
-        height: 26px;
-        width: 26px;
-        left: 4px;
-        bottom: 4px;
-        background-color: white;
-        transition: 0.4s;
-        border-radius: 50%;
-      }
-    }
-
-    input:checked + .slider {
-      background-color: #df4907;
-    }
-
-    input:focus + .slider {
-      box-shadow: 0 0 1px #df4907;
-    }
-
-    input:checked + .slider:before {
-      transform: translateX(26px);
-    }
-
-    &.small .slider:before {
-      width: 20px;
-      height: 20px;
-    }
-
-    &.small input:checked + .slider:before {
-      transform: translateX(22px);
-    }
-
-    input:disabled + .slider {
-      background-color: #aaa;
-      cursor: not-allowed;
-    }
-
-    input:checked:disabled + .slider {
-      background-color: #b3d4fc;
-    }
-
-    input:disabled + .slider:before {
-      background-color: #ccc;
-    }
-  }
+::slotted([slot="panel"][selected]) {
+  display: block;
 }
