--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,16 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0 2rem;
   display: flex;
   flex-direction: column;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+}
+
+h2 {
+  margin-top: 2rem;
 }
 
 @media (prefers-color-scheme: light) {
